[tool.poetry]
name = "tg-login"
version = "0.0.5"
description = "A command line tool to login into Telegram with user or bot accounts."
authors = ["aahnik <daw@aahnik.dev>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/aahnik/tg-login"


[tool.poetry.dependencies]
python = "^3.12"
python-dotenv = "^1.0.1"
Telethon = "^1.35.0"
typer = "^0.12.3"

[tool.poetry.dev-dependencies]
black = "^24.4.2"
pytest = "^8.2.0"
tox = "^4.15.0"
pylint = "^3.1.0"
isort = "^5.13.2"

[tool.poetry.scripts]
tg-login = 'tg_login.cli:app'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.isort]
profile = "black"

[tool.black]
line-length = 88
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
  | foo.py           # also separately exclude a file named foo.py in
                     # the root of the project
)
'''
